add mamearcade core

--- a/common-files/es_systems.cfg
+++ b/common-files/es_systems.cfg
@@ -116,6 +116,7 @@
 					<core>fbalpha2019</core>
 					<core>mame</core>
 					<core>mame_32b</core>
+					<core>mamearcade</core>
 				</cores>
 			</emulator>
 		</emulators>
@@ -1164,6 +1165,7 @@
 					<core>fbneo</core>
 					<core>fbalpha2012</core>
 					<core>fbalpha2019</core>
+					<core>mamearcade</core>
 				</cores>
 			</emulator>
 		</emulators>
