--- a/common-files/es_systems.cfg
+++ b/common-files/es_systems.cfg
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <systemList>
 	<system>
+		<name>bbk</name>
+		<fullname>BBK</fullname>
+		<manufacturer>BBK</manufacturer>
+		<release>2003</release>
+		<hardware>console</hardware>
+		<path>/storage/roms/bbk</path>
+		<extension>.gam</extension>
+		<command>/usr/bin/runemu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
+		<platform>bbk</platform>
+		<theme>bbk</theme>
+		<emulators>
+			<emulator name="retroarch">
+				<cores>
+					<core default="true">gam4980_32b</core>
+				</cores>
+			</emulator>
+		</emulators>
+	</system>
+	<system>
 		<name>3do</name>
 		<fullname>3DO</fullname>
 		<manufacturer>Panasonic</manufacturer>
