--- a/common-x55/es_systems.cfg
+++ b/common-x55/es_systems.cfg
@@ -132,6 +132,8 @@
 					<core>fbneo</core>
 					<core>fbalpha2012</core>
 					<core>fbalpha2019</core>
+          <core>mame</core>
+          <core>mame_32b</core>
 				</cores>
 			</emulator>
 		</emulators>
@@ -463,8 +465,8 @@
 		<emulators>
 			<emulator name="retroarch">
 				<cores>
-					<core default="true">gearcoleco</core>
-					<core>bluemsx</core>
+					<core default="true">bluemsx</core>
+					<core>gearcoleco</core>
 					<core>smsplus</core>
 				</cores>
 			</emulator>
@@ -700,8 +702,8 @@
 					<core>mame2003_plus</core>
 					<core>mame2010</core>
 					<core>mame2015</core>
-					<core>mame</core>
-					<core>mame_32b</core>
+          <core>mame</core>
+          <core>mame_32b</core>
 					<core>fbalpha2012</core>
 					<core>fbalpha2019</core>
 				</cores>
@@ -746,8 +748,8 @@
 			<emulator name="retroarch">
 				<cores>
 					<core>gw</core>
-					<core>mame</core>
-					<core>mame_32b</core>
+          <core>mame</core>
+          <core>mame_32b</core>
 				</cores>
 			</emulator>
 		</emulators>
@@ -1175,8 +1177,8 @@
 					<core>mame2003_plus</core>
 					<core>mame2010</core>
 					<core>mame2015</core>
-					<core>mame</core>
-					<core>mame_32b</core>
+          <core>mame</core>
+          <core>mame_32b</core>
 					<core>fbneo</core>
 					<core>fbalpha2012</core>
 					<core>fbalpha2019</core>
@@ -1298,25 +1300,6 @@
 		<command>/bin/sh %ROM%</command>
 		<platform>moonlight</platform>
 		<theme>moonlight</theme>
-	</system>
-	<system>
-		<name>moto</name>
-		<fullname>MO/TO family (TO7, TO7/70, TO8, TO8D, TO9, TO9+, MO5 and MO6)</fullname>
-		<manufacturer>Thomson</manufacturer>
-		<release>1982</release>
-		<hardware>computer</hardware>
-		<path>/storage/roms/moto</path>
-		<extension>.fd .sap .k7 .m7 .m5 .rom</extension>
-		<command>/usr/bin/runemu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
-		<platform>moto</platform>
-		<theme>moto</theme>
-		<emulators>
-			<emulator name="retroarch">
-				<cores>
-					<core default="true">theodore</core>
-				</cores>
-			</emulator>
-		</emulators>
 	</system>
 	<system>
 		<name>mplayer</name>
@@ -1517,8 +1500,8 @@
 					<core>fbalpha2019</core>
 					<core>mame2010</core>
 					<core>mame2015</core>
-					<core>mame</core>
-					<core>mame_32b</core>
+          <core>mame</core>
+          <core>mame_32b</core>
 				</cores>
 			</emulator>
 		</emulators>
@@ -1576,7 +1559,7 @@
 		<release>1998</release>
 		<hardware>portable</hardware>
 		<path>/storage/roms/ngp</path>
-		<extension>.ngp .ngc .zip .7z</extension>
+		<extension>.ngc .ngp .zip .7z</extension>
 		<command>/usr/bin/runemu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
 		<platform>ngp</platform>
 		<theme>ngp</theme>
@@ -1596,7 +1579,7 @@
 		<release>1999</release>
 		<hardware>portable</hardware>
 		<path>/storage/roms/ngpc</path>
-		<extension>.ngp .ngc .zip .7z</extension>
+		<extension>.ngc .zip .7z</extension>
 		<command>/usr/bin/runemu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
 		<platform>ngpc</platform>
 		<theme>ngpc</theme>
@@ -2385,25 +2368,6 @@
 		</emulators>
 	</system>
 	<system>
-		<name>vircon32</name>
-		<fullname>Vircon32</fullname>
-		<manufacturer>Various</manufacturer>
-		<release>2021</release>
-		<hardware>game engine</hardware>
-		<path>/storage/roms/vircon32</path>
-		<extension>.v32</extension>
-		<command>/usr/bin/runemu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
-		<platform>vircon32</platform>
-		<theme>vircon32</theme>
-		<emulators>
-			<emulator name="retroarch">
-				<cores>
-					<core default="true">vircon32</core>
-				</cores>
-			</emulator>
-		</emulators>
-	</system>
-	<system>
 		<name>virtualboy</name>
 		<fullname>Virtual Boy</fullname>
 		<manufacturer>Nintendo</manufacturer>
@@ -2429,7 +2393,7 @@
 		<release>1999</release>
 		<hardware>portable</hardware>
 		<path>/storage/roms/wonderswan</path>
-		<extension>.ws .wsc .zip .7z</extension>
+		<extension>.ws .zip .7z</extension>
 		<command>/usr/bin/runemu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
 		<platform>wonderswan</platform>
 		<theme>wonderswan</theme>
@@ -2448,7 +2412,7 @@
 		<release>2000</release>
 		<hardware>portable</hardware>
 		<path>/storage/roms/wonderswancolor</path>
-		<extension>.ws .wsc .zip .7z</extension>
+		<extension>.wsc .zip .7z</extension>
 		<command>/usr/bin/runemu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
 		<platform>wonderswancolor</platform>
 		<theme>wonderswancolor</theme>
