add new java emulator

--- a/common-files/es_systems.cfg
+++ b/common-files/es_systems.cfg
@@ -1133,7 +1133,8 @@
 			</emulator>
 			<emulator name="freej2me">
 				<cores>
-					<core default="true">freej2me</core>
+					<core default="true">freej2me_mod</core>
+					<core>freej2me</core>
 				</cores>
 			</emulator>
 		</emulators>
