--- a/common-files/es_systems.cfg
+++ b/common-files/es_systems.cfg
@@ -1063,7 +1063,7 @@
       </emulator>
       <emulator name="retroarch">
         <cores>
-          <core default="true">onscripter</core>
+          <core default="true">onscripter_32b</core>
         </cores>
       </emulator>
     </emulators>
