--- a/common-files/es_systems.cfg
+++ b/common-files/es_systems.cfg
@@ -1064,6 +1064,7 @@
       <emulator name="retroarch">
         <cores>
           <core default="true">onscripter_32b</core>
+          <core>onscripter</core>
         </cores>
       </emulator>
     </emulators>
